# swaybar

./: .gitignore  Cargo.toml  flake.nix  rustfmt.toml  shell.nix
source/: clock.rs  dbus.rs  main.rs  volume.rs
source/dbus/: bluez.rs  mod.rs  upower.rs
source/prometheus/: mod.rs  query.rs
src/: dbus.rs  main.rs  process.rs  prometheus.rs
