[package]
name = "swaybar"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = "0.3.*"
bytes = "1.4.*"
chrono = "0.4.*"
lazy_static = "1.4.*"
libc = "0.2.*"
prometheus-http-query = "0.6.*"
regex = "1.7.*"
serde = "1.0.*"
serde_json = "1.0.*"
tokio = { version = "1.26.0", default-features = false, features = ["macros", "process", "signal"] }
tokio-fd = "0.3.*"
tokio-stream = "0.1.*"
tokio-util = "0.7.*"
zbus = { version = "3.11.*", default-features = false, features = ["tokio", "xml"] }
zvariant = "3.12.*"
